# shiritori

./: .gitignore  Makefile.am  README  README.asciidoc  configuration.hpp  configure.ac  game.hpp  player.hpp  request_handler.hpp  request_spec.hpp  server.hpp  server_main.cpp
test/: Makefile.am  request_spec_test.cpp  request_spec_test.hpp  test_main.cpp
